<resources>
    <string name="app_name">RcController</string>
    <string name="result_ok">Permission Granted</string>
    <string name="result_canceled">Permission Not Granted</string>
    <string name="no_bluetooth_adapter">Device Has No Bluetooth</string>
    <string name="addButton">ADD</string>
    <string name="clearButton">CLEAR</string>
    <string name="deleteButton">DELETE BTN</string>
    <string name="saveButton">SAVE</string>
    <string name="viewDeleted">View Deleted.</string>
    <string name="chooseView">Press Button that will be deleted.</string>
    <string-array name="button_color">
        <item>Choose Color</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>

    <string-array name="button_icons">
        <item>Choose Icon</item>
        <item>Forward</item>
        <item>Backward</item>
        <item>Left</item>
        <item>Right</item>
        <item>ON</item>
        <item>OFF</item>
        <item>Start</item>
    </string-array>
    <string name="no_view">There is no button on work area.Before saving add button</string>
    <string name="added_success">Template added succesfully</string>
    <string name="added_unsuccess">Adding Template Fail.</string>
    <string name="savedTemplate">Saved Template</string>
    <string name="disable_bt">Blutetooh disabling.</string>
    <string name="pairedDevice">Paired Device List</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="deleteTemplate">Delete Temp</string>
    <string name="updateTemp">Update Temp</string>
    <string name="template_not_found">Template Not Found</string>
    <string name="deleteSucceed">Successfully deleted</string>
</resources>
