<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrawTemplateActivity">

    <RelativeLayout
        android:id="@+id/workLayout"
        android:layout_width="655dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="-1dp"
        android:layout_marginRight="0dp"
        android:background="@color/home_background">


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/operatiosLayout"
        android:layout_width="77dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/operations_button"
            android:fontFamily="monospace"
            android:onClick="addButton"
            android:text="@string/addButton" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/operations_button"
            android:fontFamily="monospace"
            android:onClick="deleteButton"
            android:text="@string/deleteButton" />

        <Button
            android:id="@+id/clearBtn"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/operations_button"
            android:fontFamily="monospace"
            android:onClick="clearButton"
            android:text="@string/clearButton" />

        <Button
            android:id="@+id/deleteTmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/operations_button"
            android:fontFamily="monospace"
            android:onClick="deleleteTemplate"
            android:text="@string/deleteTemplate" />


        <Button
            android:id="@+id/updateTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/operations_button"
            android:fontFamily="monospace"
            android:onClick="updateTemplate"
            android:text="@string/updateTemp" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/operations_button"
            android:fontFamily="monospace"
            android:onClick="saveButton"
            android:text="@string/saveButton" />


    </LinearLayout>
</RelativeLayout>